--- a/meta-oe/conf/layer.conf
+++ b/meta-oe/conf/layer.conf
@@ -54,6 +54,8 @@ SIGGEN_EXCLUDE_SAFE_RECIPE_DEPS += " \
   phoronix-test-suite->lsb-release \
   phoronix-test-suite->util-linux \
   phoronix-test-suite->busybox \
+  phoronix-test-suite->shared-mime-info \
+  phoronix-test-suite->desktop-file-utils \
 "
 
 # ttf.inc inherits fontcache which adds fontconfig-utils to RDEPENDS
