--- a/meta-oe/conf/layer.conf
+++ b/meta-oe/conf/layer.conf
@@ -72,6 +72,7 @@ SIGGEN_EXCLUDE_SAFE_RECIPE_DEPS += " \
   ttf-liberation-sans-narrow->fontconfig \
   ttf-lklug->fontconfig \
   ttf-lohit->fontconfig \
+  ttf-noto-emoji->fontconfig \
   ttf-pt-sans->fontconfig \
   ttf-roboto->fontconfig \
   ttf-mplus->fontconfig \
