phoronix-test-suite: Add python3 to safe siggen deps
Signed-off-by: Khem Raj <raj.khem@gmail.com>

--- a/meta-oe/conf/layer.conf
+++ b/meta-oe/conf/layer.conf
@@ -49,7 +49,7 @@ SIGGEN_EXCLUDE_SAFE_RECIPE_DEPS += " \
   usb-modeswitch-data->usb-modeswitch \
   lmsensors->lmsensors-config \
   phoronix-test-suite->bash \
-  phoronix-test-suite->python \
+  phoronix-test-suite->python3 \
   phoronix-test-suite->php \
   phoronix-test-suite->lsb-release \
   phoronix-test-suite->util-linux \
