layers: update LAYERSERIES_COMPAT to dunfell
Signed-off-by: Khem Raj <raj.khem@gmail.com>

--- a/meta-oe/conf/layer.conf
+++ b/meta-oe/conf/layer.conf
@@ -34,7 +34,7 @@ LAYERVERSION_openembedded-layer = "1"
 
 LAYERDEPENDS_openembedded-layer = "core"
 
-LAYERSERIES_COMPAT_openembedded-layer = "thud warrior zeus"
+LAYERSERIES_COMPAT_openembedded-layer = "thud warrior zeus dunfell"
 
 LICENSE_PATH += "${LAYERDIR}/licenses"
 
