--- a/meta-oe/conf/layer.conf
+++ b/meta-oe/conf/layer.conf
@@ -25,7 +25,9 @@ BBFILE_PRIORITY_openembedded-layer = "6"
 
 # only activates content when identified layers are present,
 # to ensure yocto compatibility check pass
-BBFILES_DYNAMIC += "meta-python:${LAYERDIR}/dynamic-layers/meta-python/recipes-*/*/*.bb \
+BBFILES_DYNAMIC += " \
+meta-python:${LAYERDIR}/dynamic-layers/meta-python/recipes-*/*/*.bb \
+perl-layer:${LAYERDIR}/dynamic-layers/perl-layer/recipes-*/*/*.bb \
 "
 
 # This should only be incremented on significant changes that will
