--- a/meta-oe/conf/layer.conf
+++ b/meta-oe/conf/layer.conf
@@ -27,6 +27,7 @@ BBFILE_PRIORITY_openembedded-layer = "6"
 # to ensure yocto compatibility check pass
 BBFILES_DYNAMIC += " \
 meta-python:${LAYERDIR}/dynamic-layers/meta-python/recipes-*/*/*.bb \
+networking-layer:${LAYERDIR}/dynamic-layers/networking-layer/recipes-*/*/*.bb \
 perl-layer:${LAYERDIR}/dynamic-layers/perl-layer/recipes-*/*/*.bb \
 "
 
