--- a/meta-oe/conf/layer.conf
+++ b/meta-oe/conf/layer.conf
@@ -92,6 +92,7 @@ SIGGEN_EXCLUDE_SAFE_RECIPE_DEPS += " \
   source-han-sans-jp-fonts->fontconfig \
   source-han-sans-kr-fonts->fontconfig \
   source-han-sans-tw-fonts->fontconfig \
+  source-code-pro-fonts->fontconfig \
 "
 
 DEFAULT_TEST_SUITES_pn-meta-oe-ptest-image = " ${PTESTTESTSUITE}"
