layers: Drop gatesgarth from LAYERSERIES_COMPAT
Signed-off-by: Khem Raj <raj.khem@gmail.com>

--- a/meta-oe/conf/layer.conf
+++ b/meta-oe/conf/layer.conf
@@ -38,7 +38,7 @@ LAYERVERSION_openembedded-layer = "1"
 
 LAYERDEPENDS_openembedded-layer = "core"
 
-LAYERSERIES_COMPAT_openembedded-layer = "gatesgarth hardknott"
+LAYERSERIES_COMPAT_openembedded-layer = " hardknott"
 
 LICENSE_PATH += "${LAYERDIR}/licenses"
 
